--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "lucide-react": "^0.469.0",
     "next": "15.1.2",
     "next-contentlayer2": "0.5.3",
+    "next-intl": "^4.3.9",
     "next-themes": "^0.4.4",
     "pliny": "0.2.1",
     "postcss": "^8.4.49",
