--- a/package.json
+++ b/package.json
@@ -24,22 +24,23 @@
     "body-scroll-lock": "^4.0.0-beta.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "contentlayer2": "0.5.3",
-    "esbuild": "0.24.2",
+    "contentlayer2": "latest",
+    "esbuild": "0.25.0",
     "github-slugger": "^2.0.0",
     "gray-matter": "^4.0.2",
     "hast-util-from-html-isomorphic": "^2.0.0",
-    "image-size": "1.2.0",
+    "image-size": "1.2.1",
     "lodash": "^4.17.21",
     "lucide-react": "^0.469.0",
-    "next": "15.1.2",
-    "next-contentlayer2": "0.5.3",
+    "next": "15.5.9",
+    "next-contentlayer2": "latest",
     "next-intl": "^4.3.9",
     "next-themes": "^0.4.4",
+    "opencode-antigravity-auth": "^1.2.8",
     "pliny": "0.2.1",
     "postcss": "^8.4.49",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
+    "react": "19.2.2",
+    "react-dom": "19.2.2",
     "react-medium-image-zoom": "^5.2.12",
     "react-snowfall": "^2.1.1",
     "reading-time": "1.5.0",
